try fix color on phonennumber on safari browser

--- a/css/style.scss
+++ b/css/style.scss
@@ -361,7 +361,9 @@ main {
 
 		p {
 			font-size: 2rem;
-
+			a:link {
+				color: black;
+			}
 			span {
 				font-weight: bold;
 				color: black;
